--- a/Course1_Linear_Algebra/GramSchmidtProcess.ipynb
+++ b/Course1_Linear_Algebra/GramSchmidtProcess.ipynb
@@ -60,7 +60,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# GRADED FUNCTION\n",
